--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/BaseAdapter.js",
   "types": "typings/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-	"gen-types": "tsc src/*.js --declaration --allowJs --emitDeclarationOnly --esModuleInterop --outDir typings"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -27,8 +26,6 @@
     "ws": "^7.4.3"
   },
   "devDependencies": {
-    "@types/ws": "^7.4.0",
-    "@wogjs/types": "github:wog-js/types",
-    "typescript": "^4.2.2"
+    "@wogjs/types": "github:wog-js/types"
   }
 }
